crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-craftinginterpreters__test__super__call_other_method.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/super/call_other_method.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (class Base (global @1) ∅
      (method foo [(local this @0)] []
         (block
            (print "Base.foo()"))))
   (class Derived (global @2) (global Base @1)
      (method bar [(local this @0)] [None]
         (block
            (print "Derived.bar()")
            (expr (call +1 (super (cell super @0) (local super @0) foo))))))
   (expr (call +3 (attr (call +3 (global Derived @2)) bar))))

----- stderr -----
