crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-craftinginterpreters__test__super__extra_arguments.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/super/extra_arguments.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (class Base (global @1) ∅
      (method foo [(local this @0) (local a @1) (local b @2)] []
         (block
            (print (+ (+ (+ (+ "Base.foo(" (local a @1)) ", ") (local b @2)) ")")))))
   (class Derived (global @2) (global Base @1)
      (method foo [(local this @0)] [None]
         (block
            (print "Derived.foo()")
            (expr (call +1 (super (cell super @0) (local super @0) foo) "a" "b" "c" "d")))))
   (expr (call +3 (attr (call +3 (global Derived @2)) foo))))

----- stderr -----
