crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-craftinginterpreters__test__super__super_in_inherited_method.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/super/super_in_inherited_method.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (class A (global @1) ∅
      (method say [(local this @0)] []
         (block
            (print "A"))))
   (class B (global @2) (global A @1)
      (method test [(local this @0)] [None]
         (block
            (expr (call +1 (super (cell super @0) (local super @0) say)))))
      (method say [(local this @0)] [None]
         (block
            (print "B"))))
   (class C (global @3) (global B @2)
      (method say [(local this @0)] [None]
         (block
            (print "C"))))
   (expr (call +4 (attr (call +4 (global C @3)) test))))

----- stderr -----
